# advent_of_code

year_2023/: main.py  pyproject.toml  utils.py
year_2023/day_1/: day_1.py  solver.py  toto.txt
year_2023/day_2/: day_2.py  solver.py
year_2023/day_2/tests/: test_day_2-1.py  test_day_2-2.py
year_2023/day_4/: solver.py
