[tool.poetry]
name = "year-2023"
version = "0.1.0"
description = ""
authors = ["Quentin <synkx@hotmail.fr>"]
readme = "README.md"
packages = [{include = "year_2023"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
